# ai-workbench

./: README.md  TODO.md  architecture.md  cron-prompt.md  research-cadence.md  research-log.md
design/: README.md
products/caw-03-paper-patent-harness/impl/: .gitignore  README.md  pyproject.toml  verify.sh
products/caw-03-paper-patent-harness/impl/caw03/: __init__.py  cli.py  config.py  venues.json
products/caw-03-paper-patent-harness/impl/caw03/adapters/: __init__.py  engine_minimal_latex.py  engine_paperorchestra.py  sink_latex_pdf.py  source_caw02_bundle.py  stubs.py
products/caw-03-paper-patent-harness/impl/caw03/core/: __init__.py  assemble.py  confidentiality.py  gate.py  harness.py  ledger.py  models.py  pdf.py  registry.py
products/caw-03-paper-patent-harness/impl/caw03/ports/: __init__.py
products/caw-03-paper-patent-harness/impl/caw03/profiles/: neurips-paper.json  systems-paper.json
products/caw-03-paper-patent-harness/impl/caw03/schema/: ledger.cue
products/caw-03-paper-patent-harness/impl/docs/: GUIDE.md
products/caw-03-paper-patent-harness/impl/tests/: test_confidentiality.py  test_interlock.py  test_slice.py
products/caw-07-tiling-ir/impl/: .gitignore  README.md  pyproject.toml
products/caw-07-tiling-ir/impl/caw07_tiling_ir/: __init__.py  cost.py  einsum.py  hw.py  plan.py  twins.py  validate.py
products/caw-07-tiling-ir/impl/examples/: demo.py
products/caw-07-tiling-ir/impl/tests/: test_core.py  test_validate.py  test_zigzag_crosscheck.py
products/caw-07-tiling-ir/impl/validation/: __init__.py  zigzag_crosscheck.py
(+1166 files in other folders)
