[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "caw07-tiling-ir"
version = "0.1.0"
description = "Abstracted, analytically-costed tiling/parallelism IR for arbitrary accelerators (Phase 1)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []          # pure standard library

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["caw07_tiling_ir"]
